Fixed overflow

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -17,7 +17,7 @@ body {
 
 .container {
   background-color: rgba(0, 0, 0, 0.4);
-  
+  overflow: hidden;
 }
 
 .header {
@@ -620,6 +620,12 @@ body {
     }
     &__image {
       min-width: 56%;
+    }
+  }
+
+  .reviews {
+    &__content {
+      grid-template-columns: repeat(auto-fill, 270px);
     }
   }
 
